--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,8 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Demo at Devopsify!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <h2>Get a free demo now!</h2>
+              <a href="#" class="btn btn-default btn-xl wow tada">Get Started</a>
           </div>
       </div>
   </aside>
