--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,8 +4,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
-                <p class="text-faded">Design & implement frequent, rapid build & release and fully automated deployments for enterprise level continious integration and deployment pipelines</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">Build rapid release and fully automated deployments for enterprise continous integration and delivery pipeline</p>
+                <a href="#contact" class="btn btn-default btn-xl">Get Started!</a>
             </div>
         </div>
     </div>
