--- a/_includes/services.html
+++ b/_includes/services.html
@@ -19,7 +19,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Cloud Adaption</h3>
+                    <h3>Cloud Adoption</h3>
                     <p class="text-muted">Read More</p>
                 </div>
             </div>
